# journita-travel-agent

./: .dockerignore  .env.example  DEMO_GUIDE.md  Dockerfile  Dockerfile.gcp  FINAL_DEPLOY.ps1  FREE_HOSTING_GUIDE.md  FRONTEND_OPTIONS.md  FRONTEND_README.md  GCP_DEPLOYMENT.md  INSTALL_NODEJS.md  QUICK_START.md  REACT_SETUP.md  README_UPDATED.md  RUNNING_STATUS.md  TESTING_GUIDE.md  UVICORN_GUIDE.md  app.yaml  backend_server.py  cloudbuild.yaml  demo_client.html  deploy_commands.bat  deploy_free.bat  deploy_gcp.ps1  dev_local.ps1  docker-compose.yml  fix_api_keys.py  frontend.html  frontend_8002.html  gcp_server.py  langgraph.json  main.py  prepare_frontend.py  production_server.py  pyproject.toml  render.yaml  run_docker_local.bat  run_docker_local.sh  server_8001.py  showcase.html  (+16 more)
.github/workflows/: ci-cd.yml
agents/: graph.py
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.css
frontend/src/components/: ChatBubble.css  ChatBubble.tsx  ChatInterface.css  ChatInterface.tsx
frontend/src/services/: api.ts
